# wheregmis.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  app.css  index.html  input.css  justfile  tailwind.config.js  test.html
.github/workflows/: gh_pages.yml
assets/: main.css  markdown.css
content/blog/: blog_test copy.md  blog_test.md  building_dioxus_motion.md  markdown_render_test.md  test_readme.md
docs/: 404.html  CNAME  index.html
docs/assets/: main-08b936e1321600e0.css  main-0dadf5582373169f.css  main-e117ff4e2b6a93a2.css  markdown-e1738c990032088f.css
docs/assets/dioxus/: Sabin's Website.js  Sabin's Website_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-4774033abde10986/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-e8d4f2300616f4bc/: inline0.js
docs/wasm/: wheregmis.d.ts  wheregmis.d.ts.br  wheregmis.js  wheregmis.js.br  wheregmis_bg.wasm  wheregmis_bg.wasm.br  wheregmis_bg.wasm.d.ts  wheregmis_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-4f3bdb922bc47527/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
public/: tailwind.css
src/: blog_content.rs  lib.rs  main.rs
src/components/: blog.rs  content.rs  left_panel.rs  main_panel.rs  markdown.rs  mod.rs  navbar.rs  profile.rs  project_grid.rs  right_panel.rs  testimonials.rs  work_experience.rs
src/ui_core/: buttons.rs  layouts.rs  mod.rs  prelude.rs
src/views/: blog.rs  footer.rs  mod.rs
