[package]
name = "wheregmis"
version = "0.1.0"
edition = "2021"

[dependencies]

dioxus = { version = "0.6.0-rc.0", features = ["router"] }

# Debug
log = "0.4.22"
dioxus-logger = "0.6.0-rc.0"
console_error_panic_hook = "0.1.7"
include_dir = "0.7.4"
once_cell = "1.20.2"
comrak = { version = "0.31.0", default-features = false }
markdown = "1.0.0-alpha.16"
dioxus-free-icons = { version = "0.8.6", features = [
    "font-awesome-brands",
    "hero-icons-solid",
] }

[features]
default = []
web = ["dioxus/web"]

[profile.rapid]
inherits = "dev"
opt-level = 1
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32

[profile.release]
opt-level = "z"    # Optimize for size.
lto = true         # Enable link-time optimization.
codegen-units = 32 #Parallelize codegen across 1 cores
strip = true       # Automatically strip symbols from the binary.
