[package]
name = "wheregmis"
version = "0.1.0"
edition = "2021"

[dependencies]

dioxus = { version = "0.6.1", features = ["router"] }
dioxus-logger = { version = "0.6.1" }
pulldown-cmark = "0.12.2"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
include_dir = "0.7.3"

[features]
default = []
web = ["dioxus/web"]

[profile.rapid]
inherits = "dev"
opt-level = 1
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32

[profile.release]
opt-level = "z"    # Optimize for size.
lto = true         # Enable link-time optimization.
codegen-units = 32 #Parallelize codegen across 1 cores
strip = true       # Automatically strip symbols from the binary.
